# cs50-python-personal

./: .gitignore  pyproject.toml
dna/: dna.py
mario/: mario.py
sentimental-credit/: credit.py
sentimental-readability/: readability.py
tests/: tests.py
