[tool.poetry]
name = "cs50-python-personal"
version = "0.0.1"
description = "My personal cs50 python working space"
authors = ["MauroGuar"]
readme = "README.md"

[tool.poetry.dependencies]
# Actual Python Version: 3.12.7
python = "^3.12"
cs50 = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
